--- a/20170825_week1_course2.md
+++ b/20170825_week1_course2.md
@@ -110,6 +110,9 @@ paste posi
 # The yes command outputs the same string, STRING, in a constant stream. If STRING is not specified, the word it repeats is "y".
 yes "pos" | head
 
+# extract data from xml-ish format. note the command "expand" which I use to remove tabs
+for i in positive negative; do ./extract.py -i $i.review | expand -t 1 > $i.rev.txt; done
+
 # paste 2198 "pos" tag to positive.rawtext > pos.tagged
 # paste 2116 "neg" tag to negative.rawtext > neg.tagged
 paste positive.rawtext <(yes "pos" | head -2198) | less
