--- a/20170825_week1_course2.md
+++ b/20170825_week1_course2.md
@@ -1,6 +1,7 @@
-# 20170825 week1 course2 Commands Explanation
+# 1-2 20170825 Week1 Course2 Notes
 
-## 0. Preparation
+## 1 Commands Explanation
+### 1.0 Preparation
 
 1. Install Anaconda
 2. Create py 3.6 environment: [How to?](https://conda.io/docs/user-guide/getting-started.html)
@@ -9,7 +10,7 @@
 5. pip install lxml
 
 
-## 1. Word Count
+### 1.1 Word Count
 
 ```bash
 # Replace all white space into \n
@@ -92,7 +93,7 @@ paste md.word.txt <(tail -n+2 md.word.txt) | sort | uniq -c | sort -k1nr | awk '
 
 ```
 
-## 2. Sentiment Analysis
+### 1.2 Sentiment Analysis
 
 ```bash
 # count postive.rawtext and negative.rawtext
@@ -162,3 +163,48 @@ head -5 data/train.txt | cut -f1 | awk '{print NR, $0, "\n"}'
 # score basic classifier predictions
 paste dev.ss.pred data/dev.label | awk '$1==$2{a+=1.0}END{print a/NR}'
 ```
+
+
+## 2 Terms
+
+### 2.1 Sparsity and Zipf's Law
+
+![Word Frequencies](./images/week1-2_word_frequencies.png)
+
+<div style="text-align:center;">
+  <span style="font-size:16px;">Word Frequencies</span>
+</div>
+
+Summarizes the behaviour we just saw:
+
+<div style="text-align:center;">
+  <span style="font-size:30px;">f * r = k</span>
+</div>
+
+* f = frequency of a word
+* r = rank of a word (if sorted by frequency)
+* k = a constant
+
+Why a line in log-scales? fr=k => f=k => logf=logk - logr
+
+**Implications of Zipf’s Law**
+
+- Regardless of how large our corpus is, there will be a lot of infrequent (and zero-frequency!) words.
+- In fact, the same holds for many other levels of linguistic structure (e.g., syntactic rules in a CFG).
+- This means we need to find clever ways to estimate probabilities for things we have rarely or never seen.
+
+
+
+### 2.2 Sentiment Analysis
+
+**Annotations**
+
+To evaluate and compare sentiment analyzers, we need reviews with gold labels (+ or -) attached. These can be
+
+- derived automatically from the original data artifact (metadata such as star ratings), or
+
+- added by a human annotator who reads the text
+
+  - Issue to consider/measure: How consistent are human annotators? If theyoften have trouble deciding or agreeing, how can this be addressed?
+
+**An evaluation measure**
