Last Update: 20170830 week2 course

--- a/20170825_week1_course2.md
+++ b/20170825_week1_course2.md
@@ -207,4 +207,6 @@ To evaluate and compare sentiment analyzers, we need reviews with gold labels (+
 
   - Issue to consider/measure: How consistent are human annotators? If theyoften have trouble deciding or agreeing, how can this be addressed?
 
-**An evaluation measure**
+**An easy evaluation measure**
+![An Evaluation Measure](./images/week1-2_evaluation_measure.png)
+week1-2_evaluation_measure
